# time-tracker-freelance

./: .dev.vars.example  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.cursor/: hooks.json  sandbox.json  worktrees.json
.cursor/agents/: sdd-explorer.md  sdd-reviewer.md  sdd-verifier.md
.cursor/commands/: audit.md  brief.md  evolve.md  execute-parallel.md  implement.md  refine.md  research.md  sdd-full-plan.md  specify.md  tasks.md  upgrade.md
.cursor/commands/_shared/: agent-manual.md
.cursor/hooks/: sdd-log-session-stop.py  sdd-log-subagent-stop.py
.cursor/rules/: sdd-system.mdc
.github/workflows/: release.yml
.sdd/: FULL_PLAN_EXAMPLES.md  ROADMAP_FORMAT_SPEC.md  TEAM_SETUP_GUIDE.md  config.json  guidelines.md
.sdd/templates/: roadmap-template.json  roadmap-template.md
apps/api/: package.json
apps/api/src/: app.ts  index.node.ts  worker-configuration.d.ts  worker.ts
apps/desktop/: index.html  package.json  panel.html  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  idle.rs  lib.rs  main.rs  timer_state.rs  tray.rs
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: deploy-cloudflare.md  install-unsigned.md
infra/docker/: docker-compose.yml
infra/wrangler/: wrangler.jsonc
specs/: 00-overview.md  index.md
specs/active/: .session-log.txt
(+63 files in other folders)
