[package]
name = "tickr"
version = "0.5.0"
description = "Tickr — indie freelancer time tracker"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tickr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2.0"
tokio = { version = "1", features = ["time", "rt"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
